Undo don't restor proper geometry in sculpt mode #66312

Closed
opened 2019-07-01 20:48:42 +02:00 by Tonatiuh de San Julián · 19 comments

System Information
Operating system: UBUNTU 18.04.02 Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version

Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: bbb3500c97

Also broke in the last build of 2.79

Short description of error

When you sculpt something with a very hard edge, like a Blob with a strong fallof, when undo there is broken geometry in all the contour were the blob was. It can be seen in the view-port and when you do again a Blob there is broken geometry in that places.
I can see the error also in wire-frame also. The only way to fix the issue is to go with Shift and pas on the surface, that restore the surface and the shading error in the view port, some brushes also fix the issue when you sculpt near this areas. Also cavity is able to see it in the viewport, that is why I think is a problem with the mesh data, and not the shading.

In 2.79 you have to enable smooth shading to see it, you can't see it with shading flat, but the error occurred when sculpting.

Exact steps for others to reproduce the error
Add a cube then a subdivision modifier with 6 subdivisión apply, go to sculpt mode, make a blob with the stroke in drag dot and an abrupt fallof.

Captura de pantalla de 2019-07-01 20-31-52.png

Undo

Captura de pantalla de 2019-07-01 20-32-01.png

Make a blob again in the same spot

Captura de pantalla de 2019-07-01 20-32-14.png

Also present in 2.79:

Captura de pantalla de 2019-07-01 20-15-07.png

**System Information** Operating system: UBUNTU 18.04.02 Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: `bbb3500c97` Also broke in the last build of 2.79 **Short description of error** When you sculpt something with a very hard edge, like a Blob with a strong fallof, when undo there is broken geometry in all the contour were the blob was. It can be seen in the view-port and when you do again a Blob there is broken geometry in that places. I can see the error also in wire-frame also. The only way to fix the issue is to go with Shift and pas on the surface, that restore the surface and the shading error in the view port, some brushes also fix the issue when you sculpt near this areas. Also cavity is able to see it in the viewport, that is why I think is a problem with the mesh data, and not the shading. In 2.79 you have to enable smooth shading to see it, you can't see it with shading flat, but the error occurred when sculpting. **Exact steps for others to reproduce the error** Add a cube then a subdivision modifier with 6 subdivisión apply, go to sculpt mode, make a blob with the stroke in drag dot and an abrupt fallof. ![Captura de pantalla de 2019-07-01 20-31-52.png](https://archive.blender.org/developer/F7559170/Captura_de_pantalla_de_2019-07-01_20-31-52.png) Undo ![Captura de pantalla de 2019-07-01 20-32-01.png](https://archive.blender.org/developer/F7559168/Captura_de_pantalla_de_2019-07-01_20-32-01.png) Make a blob again in the same spot ![Captura de pantalla de 2019-07-01 20-32-14.png](https://archive.blender.org/developer/F7559167/Captura_de_pantalla_de_2019-07-01_20-32-14.png) Also present in 2.79: ![Captura de pantalla de 2019-07-01 20-15-07.png](https://archive.blender.org/developer/F7559166/Captura_de_pantalla_de_2019-07-01_20-15-07.png)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't replicate. Is there any missing step?
bug.gif

I can't replicate. Is there any missing step? ![bug.gif](https://archive.blender.org/developer/F7559338/bug.gif)

No, that is all it is needed, But I think you need to drag the bloob, maybe?

No, that is all it is needed, But I think you need to drag the bloob, maybe?

I dragged it and still no difference.
Are you sure you can reproduce this bug in the latest Blender builds?

I dragged it and still no difference. Are you sure you can reproduce this bug in the latest Blender builds?

I just download the last one.
vokoscreen-2019-07-02_18-13-59.mp4

I just download the last one. [vokoscreen-2019-07-02_18-13-59.mp4](https://archive.blender.org/developer/F7562261/vokoscreen-2019-07-02_18-13-59.mp4)

Added subscriber: @ebarranco

Added subscriber: @ebarranco

@mano-wii The problem exists you need to have smooth shading to see it easily. I can reproduce it.
Screenshot_20190702_124533.png

@mano-wii The problem exists you need to have smooth shading to see it easily. I can reproduce it. ![Screenshot_20190702_124533.png](https://archive.blender.org/developer/F7562357/Screenshot_20190702_124533.png)

Same issue in blender 2.79.7 confirmed too.

Screenshot_20190702_125357.jpg

Same issue in blender 2.79.7 confirmed too. ![Screenshot_20190702_125357.jpg](https://archive.blender.org/developer/F7562360/Screenshot_20190702_125357.jpg)

vokoscreen-2019-07-02_20-18-58.mp4

it is a geometry problem. Here you can see the wireframe.

[vokoscreen-2019-07-02_20-18-58.mp4](https://archive.blender.org/developer/F7562389/vokoscreen-2019-07-02_20-18-58.mp4) it is a geometry problem. Here you can see the wireframe.

In eevee is even worst :(
Captura de pantalla de 2019-07-02 20-29-15.png

In eevee is even worst :( ![Captura de pantalla de 2019-07-02 20-29-15.png](https://archive.blender.org/developer/F7562398/Captura_de_pantalla_de_2019-07-02_20-29-15.png)

Also something strage happen when you sculpt with the overlay face orientation enable:
Captura de pantalla de 2019-07-02 20-32-14.png

Captura de pantalla de 2019-07-02 20-32-02.png

Captura de pantalla de 2019-07-02 20-32-06.png

Also something strage happen when you sculpt with the overlay face orientation enable: ![Captura de pantalla de 2019-07-02 20-32-14.png](https://archive.blender.org/developer/F7562404/Captura_de_pantalla_de_2019-07-02_20-32-14.png) ![Captura de pantalla de 2019-07-02 20-32-02.png](https://archive.blender.org/developer/F7562403/Captura_de_pantalla_de_2019-07-02_20-32-02.png) ![Captura de pantalla de 2019-07-02 20-32-06.png](https://archive.blender.org/developer/F7562402/Captura_de_pantalla_de_2019-07-02_20-32-06.png)
Pablo Dobarro was assigned by Germano Cavalcante 2019-07-03 12:20:08 +02:00

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu

Kinda crazy but "cool".... looks like it's weirdly pussing out the 'blob' that suffer a "compression", playing with dots... 2019-07-03 20-49-52.mp4

Kinda crazy but "cool".... looks like it's weirdly pussing out the 'blob' that suffer a "compression", playing with dots... [2019-07-03 20-49-52.mp4](https://archive.blender.org/developer/F7565063/2019-07-03_20-49-52.mp4)

Any progress in this bug?

Any progress in this bug?
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

This issue was referenced by ae7bea265d

This issue was referenced by ae7bea265d0ab48f2cb4636b734bc29ee997a311

Captura de pantalla de 2019-09-27 10-41-25.png

The mesh problem is fix, but the visual distortion is still present, Not a big problem though.

![Captura de pantalla de 2019-09-27 10-41-25.png](https://archive.blender.org/developer/F7776699/Captura_de_pantalla_de_2019-09-27_10-41-25.png) The mesh problem is fix, but the visual distortion is still present, Not a big problem though.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:48:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66312
No description provided.