Fix T66312: Undo does not restore normals correctly in sculpt mode

Reviewed By: brecht

Maniphest Tasks: T66312

Differential Revision: https://developer.blender.org/D5895